# SystemyOperacyjne_projekt_SOR

./: .gitignore  CMakeLists.txt  Dockerfile  temat.md  testy.md
app/: CMakeLists.txt
app/main/src/: main.cpp
docs/: temat.md  testy.md
lib/: CMakeLists.txt
lib/include/: DataSOR.h  GenericIPC.hpp  SemaphoreArray.hpp  SharedMemory.hpp  constants.h  utils.hpp
lib/src/: DataSOR.cpp  GenericIPC.cpp  SemaphoreArray.cpp  SharedMemory.cpp  utils.cpp
test/: CMakeLists.txt  SemaphoreArrayTest.cpp  SharedMemoryTest.cpp
